--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
     <main>
         <div class="main-container">
+            <div class="head">
+                <h1>Bubble Game</h1>
+            </div>
             <div class="nav">
                 <div class="target">
                     <h2>Target :</h2>
@@ -27,7 +30,7 @@
             </div>
     
             <div class="bubbles-container">
-                <div class="curcle"></div>
+                <!-- <div class="curcle"></div> -->
             </div>
             <div class="button-div">
                 <button id="start">Start</button>
